style: apply the correct color for scrollbar thumb

--- a/src/scss/_theme.scss
+++ b/src/scss/_theme.scss
@@ -12,7 +12,7 @@
   background-color: var(--neutral-0);
 }
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(black, 0.6);
+  background-color: var(--neutral-200);
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--neutral-0);
